appId: com.noirwire.app
---
- tapOn: "New password"
- inputText: "${PASSWORD}"
- tapOn: "Confirm password"
- inputText: "${PASSWORD}"
- hideKeyboard
- tapOn: "Save and finish"
- runFlow:
    when:
      visible: "Not now"
    commands:
      - tapOn: "Not now"
- extendedWaitUntil:
    visible: "Lock wallet"
    timeout: 60000
